tests/e2e/string_templates_parse_error2.error
Error: syntax error in story at line 2, column 6

2|    c = "{          bar         }"
           ^^^^^^^^^^^^^^^^^^^^^^^^

E0101: Variable `bar` has not been defined.
