tests/e2e/string_templates_parse_error2.story
b = [1, 2]
c = "{          bar         }"
